@@ -79,7 +79,7 @@
         ],
         "map_locations": [
           {
-            "map": "overworld",
+            "map": "child",
             "x": 2148,
             "y": 942
           }
@@ -122,7 +122,7 @@
         ],
         "map_locations": [
           {
-            "map": "overworld",
+            "map": "child",
             "x": 2426,
             "y": 860
           }
@@ -184,7 +184,7 @@
         ],
         "map_locations": [
           {
-            "map": "overworld",
+            "map": "child",
             "x": 2140,
             "y": 766
           }
@@ -223,7 +223,7 @@
         ],
         "map_locations": [
           {
-            "map": "overworld",
+            "map": "child",
             "x": 2178,
             "y": 683
           }
@@ -258,7 +258,7 @@
         ],
         "map_locations": [
           {
-            "map": "overworld",
+            "map": "child",
             "x": 2149,
             "y": 603
           }
@@ -365,7 +365,7 @@
         ],
         "map_locations": [
           {
-            "map": "overworld",
+            "map": "child",
             "x": 1824,
             "y": 380
           }
@@ -417,7 +417,7 @@
         ],
         "map_locations": [
           {
-            "map": "overworld",
+            "map": "child",
             "x": 2044,
             "y": 360
           }
@@ -469,7 +469,7 @@
         ],
         "map_locations": [
           {
-            "map": "overworld",
+            "map": "child",
             "x": 1908,
             "y": 368
           }
@@ -573,7 +573,7 @@
         ],
         "map_locations": [
           {
-            "map": "overworld",
+            "map": "child",
             "x": 2144,
             "y": 326
           }
@@ -611,7 +611,7 @@
         ],
         "map_locations": [
           {
-            "map": "overworld",
+            "map": "child",
             "x": 1776,
             "y": 190
           }
@@ -644,7 +644,7 @@
         ],
         "map_locations": [
           {
-            "map": "overworld",
+            "map": "child",
             "x": 1800,
             "y": 40
           }
@@ -679,7 +679,7 @@
         ],
         "map_locations": [
           {
-            "map": "overworld",
+            "map": "child",
             "x": 1875,
             "y": 80
           }
@@ -746,7 +746,7 @@
         ],
         "map_locations": [
           {
-            "map": "overworld",
+            "map": "child",
             "x": 1660,
             "y": 104
           }
@@ -806,7 +806,7 @@
         ],
         "map_locations": [
           {
-            "map": "overworld",
+            "map": "child",
             "x": 1684,
             "y": 220
           }
@@ -879,7 +879,7 @@
         ],
         "map_locations": [
           {
-            "map": "overworld",
+            "map": "child",
             "x": 1440,
             "y": 328
           }
@@ -912,7 +912,7 @@
         ],
         "map_locations": [
           {
-            "map": "overworld",
+            "map": "child",
             "x": 1440,
             "y": 217
           }
@@ -975,7 +975,7 @@
         ],
         "map_locations": [
           {
-            "map": "overworld",
+            "map": "child",
             "x": 1438,
             "y": 114
           }
@@ -1007,7 +1007,7 @@
         ],
         "map_locations": [
           {
-            "map": "overworld",
+            "map": "child",
             "x": 2108,
             "y": 500
           }
@@ -1052,7 +1052,7 @@
         ],
         "map_locations": [
           {
-            "map": "overworld",
+            "map": "child",
             "x": 2579,
             "y": 453
           }
@@ -1076,7 +1076,7 @@
         ],
         "map_locations": [
           {
-            "map": "overworld",
+            "map": "child",
             "x": 2545,
             "y": 315
           }
@@ -1113,7 +1113,7 @@
         ],
         "map_locations": [
           {
-            "map": "overworld",
+            "map": "child",
             "x": 2485,
             "y": 333
           }
@@ -1144,7 +1144,7 @@
         ],
         "map_locations": [
           {
-            "map": "overworld",
+            "map": "child",
             "x": 2492,
             "y": 272
           }
@@ -1202,7 +1202,7 @@
         ],
         "map_locations": [
           {
-            "map": "overworld",
+            "map": "child",
             "x": 1065,
             "y": 1209
           }
@@ -1237,7 +1237,7 @@
         ],
         "map_locations": [
           {
-            "map": "overworld",
+            "map": "child",
             "x": 1015,
             "y": 1380
           }
@@ -1263,7 +1263,7 @@
         ],
         "map_locations": [
           {
-            "map": "overworld",
+            "map": "child",
             "x": 1439,
             "y": 465
           }
@@ -1291,7 +1291,7 @@
         ],
         "map_locations": [
           {
-            "map": "overworld",
+            "map": "child",
             "x": 1293,
             "y": 649
           }
@@ -1312,7 +1312,7 @@
         ],
         "map_locations": [
           {
-            "map": "overworld",
+            "map": "child",
             "x": 1141,
             "y": 999
           }
@@ -1334,7 +1334,7 @@
         ],
         "map_locations": [
           {
-            "map": "overworld",
+            "map": "child",
             "x": 674,
             "y": 567
           }
@@ -1381,7 +1381,7 @@
         ],
         "map_locations": [
           {
-            "map": "overworld",
+            "map": "child",
             "x": 581,
             "y": 362
           }
@@ -1476,7 +1476,7 @@
         ],
         "map_locations": [
           {
-            "map": "overworld",
+            "map": "child",
             "x": 499,
             "y": 419
           }
@@ -1502,7 +1502,7 @@
         ],
         "map_locations": [
           {
-            "map": "overworld",
+            "map": "child",
             "x": 376,
             "y": 301
           }
@@ -1532,7 +1532,7 @@
         ],
         "map_locations": [
           {
-            "map": "overworld",
+            "map": "child",
             "x": 190,
             "y": 362
           }
@@ -1673,7 +1673,7 @@
         ],
         "map_locations": [
           {
-            "map": "overworld",
+            "map": "child",
             "x": 99,
             "y": 326
           }
