@@ -1,6 +1,12 @@
 ﻿[
     {
-      "name": "overworld",
+      "name": "child",
+      "location_size": 50,
+      "location_border_thickness": 5,
+      "img": "images/oot_overworld2.png"
+    },
+    {
+      "name": "adult",
       "location_size": 50,
       "location_border_thickness": 5,
       "img": "images/oot_overworld2.png"
