@@ -6,6 +6,8 @@
   -fixed frog ocarina minigame requires to play storm to them before
   -added bombchus as a sequence break for bombs (in most places)
   -added all kinds of logic sequence breaks (thanks SauceRelic!)
+  -fixed tracker capture layout
+  -added separate maps for child and adult to prep for reorganization
 1.0.0.3:
   -fixed Zoras Domain/Fountain logic interaction between child and adult
   -fixed Zoras Fountain Fairy can't be opened with hammer
